Fix recipes from some gunpacks can't be loaded correctly.